separação de deposito previo aberto e fechado para usuario

--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -58,6 +58,7 @@
                      <!--  <a class="collapse-item" href="/servico">Serviço</a>-->
                         <a class="collapse-item" href="/orcamento_admin">Orçamento</a>
                         <a class="collapse-item" href="/previo">Deposito Previo</a>
+                        <a class="collapse-item" href="/previo_pesquisa">Deposito Geral</a>
 
                     </div>
 
